# nanostatistics-stress-test

./: .gitattributes  .gitignore  README.md  generate_nanostatistics_figures_2_8.py  log_manuscript_150_ta099.txt  make_final_summary_tables.py  manifest_outputs_manuscript_150_ta099_sha256.txt  pyproject.toml  requirements.txt  run_stress_test.py
analysis_scripts/domain_sensitivity/: compute_domain_sensitivity_from_traces.py  inspect_trace_archives.py
analysis_scripts/prior_sensitivity/: finalize_prior_sensitivity.py  run_prior_sensitivity_pilot.py
nanostatistics_stress_test/: config.py  dgp.py  diagnostics.py  environment.py  models_bayesian_mass.py  models_bayesian_pvs.py  models_frequentist.py  models_laplace.py  models_stan.py  plots.py  pvs.py  simulation_runner.py  summarize_results.py
outputs_domain_sensitivity_150_ta099/: README.md  SHA256SUMS_domain_sensitivity_150_ta099.txt  domain_sensitivity_metadata.json  trace_archive_inspection.json
outputs_domain_sensitivity_150_ta099/tables/: domain_sensitivity_completeness.csv  domain_sensitivity_delta_raw.csv  domain_sensitivity_delta_summary.csv  domain_sensitivity_manuscript_table.csv  domain_sensitivity_raw.csv  domain_sensitivity_summary.csv  nominal_recalculation_validation.csv
outputs_manuscript_150_ta099/: config_used.json  environment.txt
outputs_manuscript_150_ta099/tables/: manuscript_numbers.json  metrics_raw.csv  (+7 more)
outputs_prior_sensitivity_n30_ta099/: README.md  SHA256SUMS_prior_sensitivity_n30_ta099.txt  SHA256SUMS_prior_sensitivity_traces_n30.txt  selected_simulation_ids.json
(+107 files in other folders)
