[project]
name = "nanostatistics-stress-test"
version = "0.1.0"
description = "Synthetic stress test for PVS-aware nanostatistical inference"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
  "arviz>=0.16",
  "pymc>=5.0"
]

[project.scripts]
nanostatistics-stress-test = "nanostatistics_stress_test.simulation_runner:main"
